Wed Feb 17 17:07:43 1999  Tom Yu  <tlyu@mit.edu>

	* do_as_req.c (process_as_req): Fix to assign kvno to
	reply.enc_part after encryption, since krb5_c_encrypt() now
	explicitly initializes all fields of a krb5_enc_data.

1998-12-17  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* kdc_preauth.c (check_padata): If preauth fails because the
		preauth data from the client was of an unknown type, and
		the principal does not require preauth, then the preauth
		should be disregarded.  [krb5-kdc/652]

Mon Jan  4 23:50:45 1999  Tom Yu  <tlyu@mit.edu>

	* configure.in (withval): Conditinalize ATHENA_DES3_KLUDGE on
	--enable-athena.

	* main.c (initialize_realms): Kludge to disable
	des3-marc-hmac-sha1 from the command line.

1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)

1998-10-27  Marc Horowitz  <marc@mit.edu>

	* do_as_req.c, do_tgs_req.c, extern.h, kdc_preauth.c, kdc_util.c,
	kerberos_v4.c, main.c: conver to new crypto api.

Fri Sep 25 19:47:26 1998  Tom Yu  <tlyu@mit.edu>

	* kerberos_v4.c (check_princ): Re-order if statements that check
	for null keys to make Purify shut up.

Thu Sep 17 18:21:51 1998  Tom Yu  <tlyu@mit.edu>

	* kdc_util.c (kdc_get_server_key): Fix to not use cached tgs key
	to prevent lossage when it might be out of date by always fetching
	the correct kvno for the ticket out of the database.

Tue Sep  1 19:34:30 1998  Tom Yu  <tlyu@mit.edu>

	* kerberos_v4.c (compat_decrypt_key): Add
 	ENCTYPE_LOCAL_DES3_HMAC_SHA1 to the list of keytypes to bash.
	(kerb_get_principal): Add ENCTYPE_LOCAL_DES3_HMAC_SHA1 to the list
 	of searched enctypes.

Wed Aug 19 13:37:00 1998  Tom Yu  <tlyu@mit.edu>

	* kerberos_v4.c (set_tgtkey): Add kvno arg to fetch an explicit
	kvno.  Also compare kvno as well as realm when caching the TGT
	key.  Declare as static.
	(kerb_get_principal): Add kvno argument to permit searching for
	an explicit kvno.